20000325-04:58 EST Paul Tucker <ptucker@sympatico.ca>
   * source/rtl/diskspac.c
     * un-opted the small opt. (fixed hang)

20000325-05:30 GMT -3 Luiz Rafael Culik <culik@sl.conex.net>
    Missed from previos session
    !Changelog
        Rename to Changelog.006 and started a new one
    *doc/en/array.txt
     doc/subcodes.txt
     doc/en/command.txt
     doc/en/file.txt
     doc/en/string.txt
     doc/en/input.txt
     doc/en/tclass.txt
     doc/en/set.txt
     doc/en/var.txt
     doc/en/memo.txt
     doc/en/ht_class.txt
     doc/en/objfunc.txt
     doc/en/nation.txt
     doc/en/misc.txt
     doc/en/hvm.txt
        *Small formating
    +doc/en/math.txt
        *docs for some math funcs
    *source/tools/rtf.prg
        *some Fixes
    *utils/hbdoc/genrtf.prg
     source/tools/rtf.prg
        * some fixes and a small enhacement



   * source/pp/pragma.c
   * contrib/dot/pp_harb.ch
   * tests/inline_c.prg
     * STOPDUMP renamed as ENDDUMP (with Ron permission)

2001-12-21 08:40 UTC-0300 Luiz Rafael Culik <culik@sl.conex.net>
   * utils/hbmake/hbmake.prg
    * small fix

2001-12-21 07:50 UTC-0300 Luiz Rafael Culik <culik@sl.conex.net>
  * source/rtl/filesys.c
    * hb_fsmkdir,hb_fsChdir,hb_fsRmdir,hb_fsDelete,hb_fsRename,hb_fsCurdirBuff()
      now use Win32 API calls
   * utils/hbmake/hbmake.prg
     ! Disabled profile
   * utils/hbmake/hbmutils.prg
     * An small clean up
   * ChangeLog
     * Renamed to ChangeLog.012 and started an new one
2006-02-15 13:50 UTC+0100 Przemyslaw Czerpak (druzus/at/priv.onet.pl)
  * harbour/source/vm/hvm.c
    ! fixed memory leak I introduced changing Ryszard modifications

      need such functionality yet
  + harbour/ChangeLog.015
  * harbour/source/vm/debug.c

  * harbour/harbour.spec
  * harbour/bin/hb-func.sh
    * some modification in xhb* scripts building - adding passing
      predefined compiler and linker switches
  * harbour/source/vm/hvm.c
    * minor code cleanup
